--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <h1>hola mundo</h1>
-   <h1>hola mundo</h1>
+   <h1 id="palabra">hola mundo</h1>
+   <h1 class="palabras">hola mundo</h1>
    <div></div> 
 </body>
 </html>
